# inference-onnx

./: .gitignore  CMakeLists.txt
include/: inference.h
include/nn/: autobackend.h  onnx_model_base.h
src/: inference.cpp  main.cpp
src/nn/: autobackend.cpp  onnx_model_base.cpp
